# cherryusb_esp32

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
.github/workflows/: build_examples.yml  sync_esp_pkgmng.yml
additions/: esp_cherryusb.c  usb_config.h
cherryusb/: CMakeLists.txt
cherryusb/main/: CMakeLists.txt  README.md  hello_world_main.c  usb_config.h  usb_osal_freertos_esp.c
esp32s2/: CMakeLists.txt  sdkconfig
esp32s2/main/: CMakeLists.txt  cdc_acm_msc_template.c  main.c  usb_config.h
esp32s2/main/usb_cherry/CherryUSB/port/mm32/: README.md
examples/: README.md
examples/device/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/device/cherryusb_device_cdc/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
examples/device/cherryusb_device_cdc/main/: CMakeLists.txt  device_cdc.h  device_cdc_main.c  idf_component.yml
examples/device/main/: CMakeLists.txt  idf_component.yml  main.c
examples/host/: sdkconfig  sdkconfig.old
examples/host/main/: idf_component.yml  main.c
main/: CMakeLists.txt  cdc_acm_template.c  main.c  usb_config.h
